--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geek Ecommerce</title>
 	<link rel="stylesheet" href="./styles/header.css">
+	<link rel="stylesheet" href="./styles/banner.css">
 </head>
 <body>
     <header class="headerPrincipal">
@@ -25,11 +26,12 @@
             
             <a href="#" class="login-button">Login</a>
         </header>
-        <figure>
-        
-        <h2>Febrero promocional</h2>
-        <p>Productos seleccionados con 33% de descuento</p>
-        <a href="#">Ver Consolas</a>
+        <figure class="banner__figure">
+            <div class="banner__conteiner">
+                <h2>Febrero promocional</h2>
+                <span>Productos seleccionados con 33% de descuento</span>
+                <a href="#">Ver Consolas</a>
+            </div>
     </figure>
     <main>
         <section>
