--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Geek Ecommerce</title>
 	<link rel="stylesheet" href="./styles/header.css">
 	<link rel="stylesheet" href="./styles/banner.css">
+	<link rel="stylesheet" href="./styles/galery.css">
 </head>
 <body>
     <header class="headerPrincipal">
@@ -34,50 +35,98 @@
             </div>
     </figure>
     <main>
-        <section>
-            <div>
+        <section>   
+            <div class="galery__title">
                 <span>Star Wars</span>
                 <a>Ver todo ></a>
             </div>
-            <div>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+            <div class="galery__container">
+                <ul class="galery__ul">
+                    <li>
+                        <img src="./assets/star wars/unsplash_1VV1MRafd7A.png"/>
+                    </li>
+                    <li>
+                        <img class="galery__img" src="./assets/star wars/unsplash_4OHkK555s1A.png"/>
+
+                    </li>
+                    <li>
+                        <img src="./assets/star wars/unsplash_6FDXGY9J6y4.png"/>
+
+                    </li>
+                    <li>
+                        <img src="./assets/star wars/unsplash_epRFE_hBNjo.png"/>
+
+                    </li>
+                    <li>
+                        <img src="./assets/star wars/unsplash_KeGToDVN0l4.png"/>
+                    </li>
+                    <li>
+                        <img src="./assets/star wars/unsplash_R8L1l9RN198.png"/>
+                    </li>
                 </ul>
             </div>
         </section>
 
         <section>
-            <div>
+            <div class="galery__title">
                 <span>Consolas</span>
                 <a>Ver todo ></a>
             </div>
-            <div>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+            <div class="galery__container">
+                <ul class="galery__ul">
+                    <li>
+                        <img src="./assets/games/unsplash_0POwK6iAiRQ.png"/>
+                    </li>
+                    <li>
+                        <img class="galery__img" src="./assets/games/unsplash_bUgaIaZysH0.png"/>
+
+                    </li>
+                    <li>
+                        <img src="./assets/games/unsplash_caNzzoxls8Q.png"/>
+
+                    </li>
+                    <li>
+                        <img src="./assets/games/unsplash_k-xYhI3-gJM.png"/>
+
+                    </li>
+                    <li>
+                        <img src="./assets/games/unsplash_Zjn4dT993-g.png"/>
+                    </li>
+                    <li>
+                        <img src="./assets/games/unsplash_ZV7lnfyQLmA.png"/>
+                    </li>
                 </ul>
             </div>
         </section>
 
         <section>
-            <div>
+            <div class="galery__title">
                 <span>Diversos</span>
                 <a>Ver todo ></a>
             </div>
-            <div>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+            <div class="galery__container">
+                <ul class="galery__ul">
+                    <li>
+                        <img src="./assets/star wars/unsplash_1VV1MRafd7A.png"/>
+                    </li>
+                    <li>
+                        <img class="galery__img" src="./assets/star wars/unsplash_4OHkK555s1A.png"/>
+
+                    </li>
+                    <li>
+                        <img src="./assets/star wars/unsplash_6FDXGY9J6y4.png"/>
+
+                    </li>
+                    <li>
+                        <img src="./assets/star wars/unsplash_epRFE_hBNjo.png"/>
+
+                    </li>
+                    <li>
+                        <img src="./assets/star wars/unsplash_KeGToDVN0l4.png"/>
+                    </li>
+                    <li>
+                        <img src="./assets/star wars/unsplash_R8L1l9RN198.png"/>
+                    </li>
                 </ul>
             </div>
         </section>
